--- a/vawc/templates/landing/case_type/behalf-victim.html
+++ b/vawc/templates/landing/case_type/behalf-victim.html
@@ -227,7 +227,7 @@
     
                                     <div class="col-lg-3 col-md-3 col-sm-8 pb-2">
                                         <label for="perp-nationality_0" class="form-label">Nationality: </label>
-                                        <input type="text" class="form-control" id="perp-nationality_0" name="perp-nationality_0" placeholder="Filipino">
+                                        <input type="text" class="form-control" id="perp-nationality_0" name="perp-nationality_0" value="Filipino">
                                     </div><!--end of col-->
                             
                                 </div><!--End of second row-->
@@ -255,11 +255,11 @@
                                 <div class="row pt-3 pb-3"><!--Start of fifth row-->
                                     <div class="col-lg-4 col-md-4 col-sm-8">
                                         <label for="perp-province_0" class="form-label">Province: </label>
-                                        <input type="text" class="form-control" id="perp-province_0" name="perp-province_0" placeholder="Zamboanga Del Sur">
+                                        <input type="text" class="form-control" id="perp-province_0" name="perp-province_0" value="Zamboanga Del Sur">
                                     </div><!--end of col-->
                                     <div class="col-lg-4 col-md-4 col-sm-8">
                                         <label for="perp-city_0" class="form-label">City / Mun: </label>
-                                        <input type="text" class="form-control" id="perp-city_0" id="perp-city_0" placeholder="Zamboanga City">
+                                        <input type="text" class="form-control" id="perp-city_0" id="perp-city_0" value="Zamboanga City">
                                     </div><!--emd of col-->
                                     <div class="col-lg-4 col-md-4 col-sm-8 pb-2">
                                         <label for="perp-region_0" class="form-label">Region: </label>
@@ -375,11 +375,11 @@
                             <div class="row pt-3 pb-3">
                                 <div class="col-lg-4 col-md-4 col-sm-12">
                                     <label for="incident-province" class="form-label">Province: </label>
-                                    <input type="text" class="form-control" name="incident-province" id="incident-province" placeholder="Zamboanga Del Sur">
+                                    <input type="text" class="form-control" name="incident-province" id="incident-province" value="Zamboanga Del Sur">
                                 </div><!--end of col-->
                                 <div class="col-lg-4 col-md-4 col-sm-12">
                                     <label for="incident-city" class="form-label">City / Mun: </label>
-                                    <input type="text" class="form-control" name="incident-city" id="incident-city" placeholder="Zamboanga City">
+                                    <input type="text" class="form-control" name="incident-city" id="incident-city" value="Zamboanga City">
                                 </div><!--emd of col-->
                                 <div class="col-lg-4 col-md-4 col-sm-12 pb-2">
                                     <label for="incident-region" class="form-label">Region: </label>
@@ -483,11 +483,11 @@
                             </div><!--end of col-->
                             <div class="col-lg-3 col-md-4 col-sm-12 pb-2">
                                 <label for="contact-city" class="form-label">City: </label>
-                                <input type="text" class="form-control" id="contact-city" name="contact-city" placeholder="Zamboanga City">
+                                <input type="text" class="form-control" id="contact-city" name="contact-city" placeholder="City">
                             </div><!--end of col-->
                             <div class="col-lg-3 col-md-4 col-sm-12 pb-2">
                                 <label for="contact-province" class="form-label">Province: </label>
-                                <input type="text" class="form-control" id="contact-province" name="contact-province" placeholder="Zamboanga Del Sur">
+                                <input type="text" class="form-control" id="contact-province" name="contact-province" placeholder="Province">
                             </div><!--end of col-->
                             <div class="col-lg-4 col-md-4 col-sm-12 pb-2">
                                 <label for="contact-region" class="form-label">Region: </label>
